Use QFontMetrics::lineSpacing to calculate the line y offset

BUG: 473362